# kobuki_multi_robot

./: CMakeLists.txt  README.md  package.xml
config/: robot_localization_kobuki_a.yaml  robot_localization_kobuki_b.yaml  robot_localization_kobuki_c.yaml  robot_localization_kobuki_d.yaml  robot_localization_kobuki_e.yaml
documentation/: build_instructions.txt  guia_kobuki_multi_robot.docx  guion_dwm.txt  guion_kobuki_multi_robot.txt  kobukis_build_instructions.txt  software_instructions.txt  troubleshooting.txt
documentation/ssh_connection/: bulbasur_login.sh  charmander_login.sh  ditto_login.sh  eevee_login.sh  pikachu_login.sh
documentation/to_be_filled/: kobukis_description.txt
launch/: amcl.launch  base_station.launch  base_station_w_gmapping.launch  create_map.launch  kobuki.launch  kobuki_description.launch  kobuki_navigation.launch  kobuki_navigation_w_gmapping.launch  minimal.launch  move_base.launch  multi_robot_master.launch  multi_robot_master_v2.launch  multi_robot_slave.launch  robot_localization.launch  test.launch  velocity_smoother.launch
launch/keyops/: keyop.launch  safe_keyop.launch
launch/navigation_amcl/: amcl.launch  base_station.launch  kobuki_navigation.launch  move_base.launch
launch/navigation_ekf/: amcl.launch  base_station_ekf.launch  kobuki_navigation_ekf.launch  move_base_ekf.launch
launch/navigation_gmapping/: base_station_w_gmapping.launch  kobuki_navigation_w_gmapping.launch  move_base_gmapping.launch
launch/navigation_hector/: base_station_hector_slam.launch  kobuki_navigation_h_slam.launch  move_base_hector_slam.launch
launch/sensors/: kobuki_hokuyo04LX.launch  kobuki_hokuyo20LX.launch  kobuki_hokuyo30LX.launch  kobuki_hokuyo40LX.launch  kobuki_realsense.launch  kobuki_rplidar.launch  laseroff.json
maps/: srvlab22.yaml  srvlab_2.pgm  srvlab_2.yaml  srvlab_small.pgm  srvlab_small.yaml
msg/: global_goal.msg
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_OLD.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  velocity_smoother.yaml
param/costmap_common_params/: kobuki_a.yaml  kobuki_b.yaml  kobuki_c.yaml  kobuki_d.yaml  kobuki_e.yaml
param/global_goals/: global_goals.txt  srvlab.txt  srvlab22.txt  srvlab_2.txt  srvlab_3.txt  willowgarage.txt
param/missions/: default.yaml
param/navigation_amcl/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
param/navigation_ekf/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
param/navigation_gmapping/: amcl.yaml  laser_filter_params.yaml  local_costmap_params.yaml
param/navigation_hector/: dwa_local_planner_params.yaml  global_costmap_params.yaml
rviz/: multi_robot_h_slam.rviz  multi_robot_navigation.rviz  multi_robot_visualization.rviz
simulation/environment/: srvlab.world
simulation/includes/: robot.launch
simulation/kobuki_parts/: custom_part.xacro
simulation/launch/: gazebo.launch  kobuki_gazebo.launch  kobuki_gazebo_navigation.launch  model_state_setter.launch  sim_kobuki.launch  sim_kobuki_navigation.launch  simulated_mission.launch  simulated_mission_ekf.launch  simulated_mission_gmapping.launch  simulated_mission_hectormapping.launch  simulated_playground.launch  spawn_kobukis.launch
src/: .multi_robot_slave.cpp.swp  README.md  model_state_setter.cpp  multi_robot_master.cpp  multi_robot_master_v2.cpp  multi_robot_slave.cpp
start_and_nav/: kobuki_navigation.sh  kobuki_start.sh  permissions.sh
start_and_nav/kobuki_a/: kobuki_navigation.sh  kobuki_start.sh
urdf/: kobuki.urdf.xacro  kobuki_b.urdf.xacro  kobuki_c.urdf.xacro  kobuki_d.urdf.xacro
(+51 files in other folders)
